chassis/tests/failing/comp_cyclic_dep.stderr
error: custom attribute panicked
 --> $DIR/comp_cyclic_dep.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: explicit panic
